# ade7953

./: CMakeLists.txt  ade7953.c  ade7953.h  ade7953_i2c.c  ade7953_spi.c
AN-1367_I2C_interface/: MyTera_Setup2014.INI
AN-1367_I2C_interface/AN_1367_files/: ADuCM360StartUp.s  ADuCM360_I2C_AppNote.c  ADuCM360_I2C_AppNote.uvgui.JLim4  ADuCM360_I2C_AppNote.uvgui_JLim4.bak  ADuCM360_I2C_AppNote.uvopt  ADuCM360_I2C_AppNote.uvproj  ADuCM360_I2C_AppNote_ADuCM360_I2C_AppNote.dep  ADuCM360_Regs.c  ADuCM360_Regs.h  ADuCM360_Test_Lib.c  ADuCM360_Test_Lib.c.bak  ADuCM360_Test_Lib.h  I2C_AppNote1.IAB  I2C_AppNote1.IAD  I2C_AppNote1.IMB  I2C_AppNote1.IMD  I2C_AppNote1.PFI  I2C_AppNote1.PO  I2C_AppNote1.PR  I2C_AppNote1.PRI  I2C_AppNote1.PS  I2C_AppNote1.WK3  JLinkLog.txt  JongSuLib_V2.c  JongSuLib_V2.h  aducm360startup.lst
AN-1367_I2C_interface/AN_1367_files/Debug/: ADuCM360_AppNote.axf  ADuCM360_AppNote.htm  ADuCM360_AppNote.lnp  ADuCM360_AppNote.plg  aducm360_i2c_appnote.crf  aducm360_i2c_appnote.s  aducm360_regs.crf  aducm360_regs.s  aducm360_test_lib.crf  aducm360_test_lib.s  jongsulib_v2.crf  jongsulib_v2.s
